# HyperDesk-MR

./: .gitignore  README.md  gradlew  hzos-classes.dex  settings.gradle
.claude/: settings.json  settings.local.json
.github/workflows/: build.yml  pages.yml  unit-tests.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/camera/: CameraManager.cpp  CameraManager.h  QrScanner.cpp  QrScanner.h
app/src/main/cpp/codec/: CodecSurfaceBridge.cpp  CodecSurfaceBridge.h  MediaCodecDecoder.cpp  MediaCodecDecoder.h
app/src/main/cpp/rdp/: EvdevMouseReader.cpp  EvdevMouseReader.h  RdpConnectionManager.cpp  RdpConnectionManager.h  RdpDisplayControl.cpp  RdpDisplayControl.h  RdpInputForwarder.cpp  RdpInputForwarder.h  jni_mouse_bridge.cpp  jni_mouse_bridge.h
app/src/main/cpp/scene/: FrustumCuller.cpp  FrustumCuller.h  MonitorLayout.cpp  MonitorLayout.h  VirtualMonitor.cpp  VirtualMonitor.h
app/src/main/cpp/util/: AndroidBridge.h  Check.h  DebugUtils.h  ErrorUtils.h  Logger.h
app/src/main/cpp/xr/: CursorOverlay.cpp  CursorOverlay.h  ImGuiToolbar.cpp  ImGuiToolbar.h  StatusOverlay.cpp  StatusOverlay.h  XrCompositor.cpp  XrCompositor.h  XrContext.cpp  XrContext.h  XrPassthrough.cpp  XrPassthrough.h  XrSwapchain.cpp  XrSwapchain.h
docs/specs/: SPEC-multi-monitor-arc.md  SPEC-qr-anchor.md
gradle/wrapper/: gradle-wrapper.properties
openspec/changes/archive/2026-03-20-init/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-20-init/specs/rdp-multi-monitor/: spec.md
openspec/changes/archive/2026-03-20-init/specs/video-decode/: spec.md
openspec/changes/archive/2026-03-20-init/specs/xr-session/: spec.md
openspec/changes/archive/2026-03-22-feat-workfow-build-github-action/: proposal.md  specs.md  tasks.md
openspec/changes/archive/2026-03-22-feat-workfow-build-github-action/specs/ci-pipeline/: spec.md
openspec/changes/archive/2026-03-23-fix-ci-freerdp3-api-migration/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-23-fix-ci-freerdp3-api-migration/specs/ci-pipeline/: spec.md
openspec/changes/archive/2026-03-23-fix-ci-freerdp3-api-migration/specs/openssl-android-packaging/: spec.md
openspec/changes/archive/2026-03-23-fix-ci-freerdp3-api-migration/specs/rdp-multi-monitor/: spec.md
openspec/changes/archive/2026-03-23-freerdp-integration-and-h264-bitstream-injection/: proposal.md  specs.md
openspec/changes/archive/2026-03-23-freerdp-integration-and-h264-bitstream-injection/specs/rdp-multi-monitor/: spec.md
openspec/changes/archive/2026-03-23-freerdp-integration-and-h264-bitstream-injection/specs/video-decode/: spec.md
openspec/changes/archive/2026-03-23-zero-copy-openxr-and-amediacodec-render-bridge/: proposal.md  specs.md  tasks.md
openspec/changes/archive/2026-03-23-zero-copy-openxr-and-amediacodec-render-bridge/specs/video-decode/: spec.md
openspec/changes/archive/2026-03-23-zero-copy-openxr-and-amediacodec-render-bridge/specs/xr-session/: spec.md
openspec/changes/archive/2026-03-24-unit-testing-suite-for-core-logic/: proposal.md  specs.md  tasks.md
openspec/changes/archive/2026-03-24-unit-testing-suite-for-core-logic/specs/ci-pipeline/: spec.md
openspec/changes/archive/2026-03-24-unit-testing-suite-for-core-logic/specs/frustum-culling/: spec.md
openspec/changes/archive/2026-03-24-unit-testing-suite-for-core-logic/specs/rdp-multi-monitor/: spec.md
openspec/changes/archive/2026-03-24-unit-testing-suite-for-core-logic/specs/video-decode/: spec.md
openspec/changes/archive/2026-03-25-fix-quest3-launch-blockers/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-25-fix-quest3-launch-blockers/specs/android-freerdp-bootstrap/: spec.md
openspec/changes/archive/2026-03-25-fix-quest3-launch-blockers/specs/optional-passthrough/: spec.md
openspec/changes/archive/2026-03-25-fix-quest3-launch-blockers/specs/xr-session/: spec.md
openspec/changes/archive/2026-03-26-qr-code-configuration-and-passthrough-activation/: proposal.md  tasks.md
openspec/changes/archive/2026-03-26-qr-code-configuration-and-passthrough-activation/specs/camera-access/: spec.md
openspec/changes/archive/2026-03-26-qr-code-configuration-and-passthrough-activation/specs/qr-scanner/: spec.md
openspec/changes/archive/2026-03-26-qr-code-configuration-and-passthrough-activation/specs/xr-session/: spec.md
openspec/changes/archive/2026-03-26-user-feedback-and-error-handling/: proposal.md  specs.md  tasks.md
openspec/changes/archive/2026-03-26-user-feedback-and-error-handling/specs/android-freerdp-bootstrap/: spec.md
openspec/changes/archive/2026-03-26-user-feedback-and-error-handling/specs/qr-scanner/: spec.md
openspec/changes/archive/2026-03-26-user-feedback-and-error-handling/specs/xr-session/: spec.md
openspec/changes/archive/2026-04-02-stabilize-quest-rdp-display-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-02-stabilize-quest-rdp-display-pipeline/specs/camera-access/: spec.md
openspec/changes/freerdp-integration-and-h264-bitstream-injection/: tasks.md
openspec/specs/android-freerdp-bootstrap/: spec.md
openspec/specs/camera-access/: spec.md
openspec/specs/ci-pipeline/: spec.md
openspec/specs/frustum-culling/: spec.md
openspec/specs/input-forwarding/: spec.md
openspec/specs/monitor-layout/: spec.md
openspec/specs/openssl-android-packaging/: spec.md
openspec/specs/optional-passthrough/: spec.md
openspec/specs/qr-scanner/: spec.md
openspec/specs/rdp-multi-monitor/: spec.md
openspec/specs/rdpgfx-software-fallback/: spec.md
openspec/specs/video-decode/: spec.md
openspec/specs/xr-session/: spec.md
tests/: CMakeLists.txt  test_FrustumCuller.cpp  test_MonitorLayout.cpp  test_RdpDisplayControl.cpp  test_RdpParser.cpp
tests/stubs/: android_stubs.cpp
tests/stubs/android/: log.h  native_window.h
tests/stubs/freerdp/channels/: disp.h
tests/stubs/freerdp/client/: disp.h
tests/stubs/media/: NdkMediaCodec.h  NdkMediaFormat.h
web/: index.html  manifest.webmanifest  service-worker.js
(+6 files in other folders)
